--- a/SogdianMerchant/_Imports.razor
+++ b/SogdianMerchant/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.FluentUI.AspNetCore.Components
 @using SogdianMerchant
 @using SogdianMerchant.Layout
 @using SogdianMerchant.Services
