Added projects for core library and test fixture

--- a/SogdianMerchant/_Imports.razor
+++ b/SogdianMerchant/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using Microsoft.FluentUI.AspNetCore.Components
 @using SogdianMerchant
+@using SogdianMerchant.Core
 @using SogdianMerchant.Layout
-@using SogdianMerchant.Services
+@using SogdianMerchant.Core.Services
