loss event logic

--- a/SogdianMerchant/Pages/Home.razor
+++ b/SogdianMerchant/Pages/Home.razor
@@ -6,8 +6,8 @@
 
 <div style="height: 100vh;">
     <FluentMainLayout NavMenuTitle="Navigation menu">
-        <Header>Sogdian Merchants</Header>
-        <SubHeader>The Caravan Trading Game</SubHeader>
+        <Header><h3>Sogdian Merchants</h3></Header>
+        <SubHeader><p>The Caravan Trading Game</p></SubHeader>
         <Body>
             <div>
                 <p>Round @GameService.State.RoundNumber</p>
